# ros_velodyne_configuration

./: CMakeLists-ExternalProjects.txt  CMakeLists.txt  README.md  package.xml
cfg/: VLP16_settings.cfg
cmake/: cmake_tools.cmake  cmake_tools_for_ros.cmake
include/: ros_macros.h  velodyne_tools.h  velodyne_tools_boost_asio.h  velodyne_tools_boost_asio_clientasynch.h  velodyne_tools_boost_asio_clientsynch.h  velodyne_webserver.h  vlp16_settings.h  vlp16_webserver.h  vlp16_webserver_services.h  vlp16_webserver_services.h.autosave  vlp16_webserver_services_diagnostics.h  vlp16_webserver_services_settings.h  vlp16_webserver_services_status.h
launch/: server_diagnostics.launch  server_settings.launch  server_status.launch  servers_configuration.launch
msg/: VLP16_DiagnosticsMessage.msg  VLP16_DiagnosticsRawMessage.msg  VLP16_SettingsMessage.msg  VLP16_StatusMessage.msg
src/diagnostics/: CMakeLists.txt  diagnostics_server.cc
src/lib/: CMakeLists.txt  velodyne_tools.cc  velodyne_tools_boost_asio.cc  vlp16_webserver.cc  vlp16_webserver_services.cc
src/lib/tests/std_function/: a.out  std_function.cpp
src/scripts/: python_request_vlp16.py
src/settings/: CMakeLists.txt  settings_server.cc
src/status/: CMakeLists.txt  status_server.cc
src/tools/: CMakeLists.txt  velodyne_tools_boost_asio.cc
src/tools/tests/std_function/: build_and_run.sh  std_function.cpp
src/webserver/: CMakeLists.txt  vlp16_settings.cpp  vlp16_webserver.cc  vlp16_webserver_services.inl
src/webserver/boost_asio/: velodyne_tools_boost_asio.cc  velodyne_tools_boost_asio_clientasynch.cc  velodyne_tools_boost_asio_clientsynch.cc
src/webserver/connections/: vlp16_webserver.inl  vlp16_webserver_boost_asio_asynch.cpp  vlp16_webserver_boost_asio_synch.cpp  vlp16_webserver_curl.cpp
src/webserver/servicelocator/: model_servicelocator.qmodel
src/webserver/servicelocator/include/: asynch_httpclient.h  asynch_httpclient_imp.h  boost_httpclient.h  httpclient.h  locator_httpclient.h  null_httpclient.h  servicelocator.h  synch_httpclient.h  synch_httpclient_imp.h  test_httpclient.h  velodynewebserver.h  velodynewebserver_meta.h  velodynewebserver_meta.instantiation  vlp16webserver.h  vlp16webserver_ros.h
src/webserver/servicelocator/src/: asynch_httpclient.cpp  asynch_httpclient_imp.cpp  boost_httpclient.cpp  parser_json.cpp  synch_httpclient.cpp  synch_httpclient_imp.cpp  test_httpclient.cpp  test_velodyne_webserver.cpp  velodynewebserver.cpp  velodynewebserver_meta.cpp  vlp16webserver.cpp  vlp16webserver_ros.cpp
src/webserver/services/: vlp16_webserver_services.cpp  vlp16_webserver_services.inl  vlp16_webserver_services_diagnostics.cpp  vlp16_webserver_services_settings.cpp  vlp16_webserver_services_status.cpp
srv/: VLP16_DiagnosticsRawService.srv  VLP16_DiagnosticsService.srv  VLP16_SettingsService.srv  VLP16_StatusService.srv
