<package>

  <name>velodyne_configuration</name>
  <version>1.2.0</version>
  <description>
    .
  </description>
  <maintainer email="lionel.atty@ign.fr">Lionel ATTY</maintainer>
  <author>Lionel ATTY</author>
  <license>BSD</license>

  <url type="website"></url>
  <url type="repository"></url>
  <url type="bugtracker"></url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
