<?xml version="1.0"?>
<package>
  <name>velodyne_configuration</name>
  <version>0.0.0</version>
  <description>The velodyne_configuration package</description>
  <maintainer email="lionel.atty@ign.fr">Lionel ATTY</maintainer>
  <author>Lionel ATTY</author>
  <license>BSD</license>

  <url type="website"></url>
  <url type="repository"></url>
  <url type="bugtracker"></url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
